--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,174 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+:root {
+    /* CSS variables for color and shadow values */
+    --blue-1: #000443;
+    --blue-2: #060f90;
+    --yellow-1: #FAC742;
+    --white: #FFF;
+    --gray-1: #EDEDED;
+    --shadow-dark: rgb(0, 0, 0, 0.3);
+    --shadow-light: rgb(255, 255, 255, 0.1);
+}
+
+* {
+    /* Resetting default styles for margin, padding, and box-sizing */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    /* Body styles - font, size, background, and centering */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--blue-1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.container {
+
+    /* Container styles - width, height, background, and border-radius */
+    @media (max-width: 600px) {
+        width: 90%;
+    }
+
+    width: 400px;
+    height: 80vh;
+    background-color: var(--blue-2);
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px var(--shadow-dark);
+}
+
+.upper-data {
+    /* Upper data styles - position, overflow, and border radius */
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 50%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.lower-data {
+    /* Lower data styles - position, overflow, and flex layout */
+
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 50%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    display: flex;
+    padding: 1em;
+    flex-direction: column;
+
+    /* Responsive styles for smaller screens */
+    @media (max-width: 600px) {
+        padding: 0.5em;
+    }
+}
+
+.upper-data img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.wheather-data {
+    position: relative;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    background-color: var(--shadow-dark);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.location {
+    color: var(--white);
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.temparature {
+    color: var(--white);
+    font-size: 4em;
+    text-align: center;
+    font-weight: 900;
+}
+
+.more-info-label {
+    color: var(--white);
+}
+
+.more-info-container {
+    flex: 1;
+    background-color: var(--shadow-light);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    margin-top: 1em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.info-block {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+}
+
+.info-block-label {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.info-block-label img {
+    width: 3em;
+
+}
+
+.info-block-label span {
+    color: var(--white);
+    font-size: 1.2em;
+}
+
+.info-block-value {
+    width: 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: var(--white);
+}
+
+.search {
+    margin-bottom: 1em;
+    text-align: center;
+}
+
+.search input {
+    background-color: var(--shadow-light);
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    padding: 1em;
+    color: var(--gray-1);
+    font-size: 0.8em;
+    text-align: center;
+}
